# rcc-pico-fp

dev/pico/: CMakeLists.txt
dev/pico/challenges/00-blink/0-sos/: 0-sos.cpp
dev/pico/challenges/04-sensor2/in-class-example/: integrator.cpp
dev/pico/challenges/05-statemachines/solutions/: 03-printfunction.cpp
dev/pico/include/: led_pwm.h  rcc_pins.h
dev/pico/lessons/01/: fix_helloworld.cpp  helloworld.cpp
dev/pico/lessons/02/00-basics/: conditionals.cpp  motor.cpp  operations.cpp  syntax.cpp
dev/pico/lessons/02/01-sensors/: blink-led.cpp  blink-with-button.cpp  button-array.cpp  button-moves-servo.cpp  control-theory.cpp  counts-per-rotation.cpp  follow-object.cpp  hit-the-brakes.cpp  lidar-spinning-robot.cpp  measuring-spin.cpp  odom-scaled.cpp  odom-straight-for-200.cpp  rotate-robot.cpp  testing-scalefactor.cpp
dev/pico/lessons/02/02-sensors/: arc-distance.cpp  measure-distance.cpp  odom-stop200.cpp  play-fetch.cpp
dev/pico/lessons/02/03-statemachines/: blink-led-sm.cpp  follow.cpp  printfunction.cpp  target-acquired-sm.cpp
dev/pico/lessons/02/04-rgbled/: rgb-led.cpp
dev/pico/lessons/02/05-control/: angle-controller.cpp  dist-control.cpp  drive-straight.cpp  path-following.cpp  path-following2.cpp  square.cpp  travel-1m.cpp  travel-200.cpp
dev/pico/python/: keyboard_dev.py  twist.py
dev/pico/python/comms/: controller.py  messages.py
dev/pico/python/matplotlib/: matplotlib_example.py  test.py
dev/pico/tests/: wireless_headless_test.cpp
lib/serial-packets/: messages.c++  messages.h
